// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-14fwawz"
      >
        <div
          class="title"
        >
          审批流程模版
        </div>
        <div
          class="extra"
        >
          <a
            href="/sqle/project/700300/progress/update/700300-WorkflowTemplate"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="edit"
                  class="anticon anticon-edit"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="edit"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                修改当前审批流程模版
              </span>
            </button>
          </a>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col css-dev-only-do-not-override-txh9fw"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="file-add-fill"
                        >
                          <path
                            d="M9.33333 1.16666L12.25 4.08332V12.2547C12.2498 12.4082 12.1887 12.5554 12.0801 12.6639C11.9715 12.7724 11.8243 12.8333 11.6707 12.8333H2.32925C2.17605 12.8323 2.02943 12.771 1.92104 12.6627C1.81266 12.5544 1.75122 12.4079 1.75 12.2547V1.74532C1.75 1.42566 2.00958 1.16666 2.32925 1.16666H9.33333ZM6.41667 6.41666H4.66667V7.58332H6.41667V9.33332H7.58333V7.58332H9.33333V6.41666H7.58333V4.66666H6.41667V6.41666Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="audit-fill"
                        >
                          <g
                            id="Vector"
                          >
                            <path
                              d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                              fill="white"
                            />
                            <path
                              d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                              fill="white"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #1
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                fill="none"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="account-circle-fill"
                                >
                                  <path
                                    d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                                    fill="#1CB889"
                                    id="Vector"
                                  />
                                </g>
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源审核权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="audit-fill"
                        >
                          <g
                            id="Vector"
                          >
                            <path
                              d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                              fill="white"
                            />
                            <path
                              d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                              fill="white"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #2
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            step desc
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center work-flow-auth-avatar-wrapper basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-avatar ant-avatar-sm ant-avatar-circle work-flow-auth-avatar css-7njbce css-dev-only-do-not-override-txh9fw"
                                  >
                                    <span
                                      class="ant-avatar-string"
                                      style="transform: scale(1) translateX(-50%);"
                                    >
                                      T
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="send-plane-fill"
                        >
                          <path
                            d="M1.13517 5.43373C0.830674 5.33223 0.827757 5.16832 1.14101 5.0639L12.2751 1.35273C12.5837 1.25007 12.7604 1.42273 12.6741 1.7249L9.49259 12.8584C9.40509 13.167 9.22717 13.1775 9.09651 12.8846L7.00001 8.16665L10.5 3.49998L5.83334 6.99998L1.13517 5.43373Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                fill="none"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="account-circle-fill"
                                >
                                  <path
                                    d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                                    fill="#1CB889"
                                    id="Vector"
                                  />
                                </g>
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源上线权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module css-dev-only-do-not-override-txh9fw"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level css-dev-only-do-not-override-txh9fw"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text css-dev-only-do-not-override-txh9fw"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps css-dev-only-do-not-override-txh9fw"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item css-dev-only-do-not-override-txh9fw"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time css-dev-only-do-not-override-txh9fw"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="time-line"
                      >
                        <path
                          d="M8.00004 14.6666C4.31804 14.6666 1.33337 11.682 1.33337 7.99998C1.33337 4.31798 4.31804 1.33331 8.00004 1.33331C11.682 1.33331 14.6667 4.31798 14.6667 7.99998C14.6667 11.682 11.682 14.6666 8.00004 14.6666ZM8.00004 13.3333C9.41453 13.3333 10.7711 12.7714 11.7713 11.7712C12.7715 10.771 13.3334 9.41447 13.3334 7.99998C13.3334 6.58549 12.7715 5.22894 11.7713 4.22874C10.7711 3.22855 9.41453 2.66665 8.00004 2.66665C6.58555 2.66665 5.229 3.22855 4.2288 4.22874C3.22861 5.22894 2.66671 6.58549 2.66671 7.99998C2.66671 9.41447 3.22861 10.771 4.2288 11.7712C5.229 12.7714 6.58555 13.3333 8.00004 13.3333ZM8.66671 7.99998H11.3334V9.33331H7.33337V4.66665H8.66671V7.99998Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail with no review step 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-14fwawz"
      >
        <div
          class="title"
        >
          审批流程模版
        </div>
        <div
          class="extra"
        >
          <a
            href="/sqle/project/700300/progress/update/700300-WorkflowTemplate"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="edit"
                  class="anticon anticon-edit"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="edit"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                修改当前审批流程模版
              </span>
            </button>
          </a>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col css-dev-only-do-not-override-txh9fw"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="file-add-fill"
                        >
                          <path
                            d="M9.33333 1.16666L12.25 4.08332V12.2547C12.2498 12.4082 12.1887 12.5554 12.0801 12.6639C11.9715 12.7724 11.8243 12.8333 11.6707 12.8333H2.32925C2.17605 12.8323 2.02943 12.771 1.92104 12.6627C1.81266 12.5544 1.75122 12.4079 1.75 12.2547V1.74532C1.75 1.42566 2.00958 1.16666 2.32925 1.16666H9.33333ZM6.41667 6.41666H4.66667V7.58332H6.41667V9.33332H7.58333V7.58332H9.33333V6.41666H7.58333V4.66666H6.41667V6.41666Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="send-plane-fill"
                        >
                          <path
                            d="M1.13517 5.43373C0.830674 5.33223 0.827757 5.16832 1.14101 5.0639L12.2751 1.35273C12.5837 1.25007 12.7604 1.42273 12.6741 1.7249L9.49259 12.8584C9.40509 13.167 9.22717 13.1775 9.09651 12.8846L7.00001 8.16665L10.5 3.49998L5.83334 6.99998L1.13517 5.43373Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              -
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module css-dev-only-do-not-override-txh9fw"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level css-dev-only-do-not-override-txh9fw"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text css-dev-only-do-not-override-txh9fw"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps css-dev-only-do-not-override-txh9fw"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item css-dev-only-do-not-override-txh9fw"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time css-dev-only-do-not-override-txh9fw"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="time-line"
                      >
                        <path
                          d="M8.00004 14.6666C4.31804 14.6666 1.33337 11.682 1.33337 7.99998C1.33337 4.31798 4.31804 1.33331 8.00004 1.33331C11.682 1.33331 14.6667 4.31798 14.6667 7.99998C14.6667 11.682 11.682 14.6666 8.00004 14.6666ZM8.00004 13.3333C9.41453 13.3333 10.7711 12.7714 11.7713 11.7712C12.7715 10.771 13.3334 9.41447 13.3334 7.99998C13.3334 6.58549 12.7715 5.22894 11.7713 4.22874C10.7711 3.22855 9.41453 2.66665 8.00004 2.66665C6.58555 2.66665 5.229 3.22855 4.2288 4.22874C3.22861 5.22894 2.66671 6.58549 2.66671 7.99998C2.66671 9.41447 3.22861 10.771 4.2288 11.7712C5.229 12.7714 6.58555 13.3333 8.00004 13.3333ZM8.66671 7.99998H11.3334V9.33331H7.33337V4.66665H8.66671V7.99998Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail with not projectArchive 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-14fwawz"
      >
        <div
          class="title"
        >
          审批流程模版
        </div>
        <div
          class="extra"
        >
          <a
            href="/sqle/project/700300/progress/update/700300-WorkflowTemplate"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="edit"
                  class="anticon anticon-edit"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="edit"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                修改当前审批流程模版
              </span>
            </button>
          </a>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col css-dev-only-do-not-override-txh9fw"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="file-add-fill"
                        >
                          <path
                            d="M9.33333 1.16666L12.25 4.08332V12.2547C12.2498 12.4082 12.1887 12.5554 12.0801 12.6639C11.9715 12.7724 11.8243 12.8333 11.6707 12.8333H2.32925C2.17605 12.8323 2.02943 12.771 1.92104 12.6627C1.81266 12.5544 1.75122 12.4079 1.75 12.2547V1.74532C1.75 1.42566 2.00958 1.16666 2.32925 1.16666H9.33333ZM6.41667 6.41666H4.66667V7.58332H6.41667V9.33332H7.58333V7.58332H9.33333V6.41666H7.58333V4.66666H6.41667V6.41666Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="send-plane-fill"
                        >
                          <path
                            d="M1.13517 5.43373C0.830674 5.33223 0.827757 5.16832 1.14101 5.0639L12.2751 1.35273C12.5837 1.25007 12.7604 1.42273 12.6741 1.7249L9.49259 12.8584C9.40509 13.167 9.22717 13.1775 9.09651 12.8846L7.00001 8.16665L10.5 3.49998L5.83334 6.99998L1.13517 5.43373Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              -
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module css-dev-only-do-not-override-txh9fw"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level css-dev-only-do-not-override-txh9fw"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text css-dev-only-do-not-override-txh9fw"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps css-dev-only-do-not-override-txh9fw"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item css-dev-only-do-not-override-txh9fw"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time css-dev-only-do-not-override-txh9fw"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="time-line"
                      >
                        <path
                          d="M8.00004 14.6666C4.31804 14.6666 1.33337 11.682 1.33337 7.99998C1.33337 4.31798 4.31804 1.33331 8.00004 1.33331C11.682 1.33331 14.6667 4.31798 14.6667 7.99998C14.6667 11.682 11.682 14.6666 8.00004 14.6666ZM8.00004 13.3333C9.41453 13.3333 10.7711 12.7714 11.7713 11.7712C12.7715 10.771 13.3334 9.41447 13.3334 7.99998C13.3334 6.58549 12.7715 5.22894 11.7713 4.22874C10.7711 3.22855 9.41453 2.66665 8.00004 2.66665C6.58555 2.66665 5.229 3.22855 4.2288 4.22874C3.22861 5.22894 2.66671 6.58549 2.66671 7.99998C2.66671 9.41447 3.22861 10.771 4.2288 11.7712C5.229 12.7714 6.58555 13.3333 8.00004 13.3333ZM8.66671 7.99998H11.3334V9.33331H7.33337V4.66665H8.66671V7.99998Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail without permission 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-14fwawz"
      >
        <div
          class="title"
        >
          审批流程模版
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-col css-dev-only-do-not-override-txh9fw"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="file-add-fill"
                        >
                          <path
                            d="M9.33333 1.16666L12.25 4.08332V12.2547C12.2498 12.4082 12.1887 12.5554 12.0801 12.6639C11.9715 12.7724 11.8243 12.8333 11.6707 12.8333H2.32925C2.17605 12.8323 2.02943 12.771 1.92104 12.6627C1.81266 12.5544 1.75122 12.4079 1.75 12.2547V1.74532C1.75 1.42566 2.00958 1.16666 2.32925 1.16666H9.33333ZM6.41667 6.41666H4.66667V7.58332H6.41667V9.33332H7.58333V7.58332H9.33333V6.41666H7.58333V4.66666H6.41667V6.41666Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container  css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="audit-fill"
                        >
                          <g
                            id="Vector"
                          >
                            <path
                              d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                              fill="white"
                            />
                            <path
                              d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                              fill="white"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #1
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                fill="none"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="account-circle-fill"
                                >
                                  <path
                                    d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                                    fill="#1CB889"
                                    id="Vector"
                                  />
                                </g>
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源审核权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon css-dev-only-do-not-override-txh9fw"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 1L9 5L17 1"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="send-plane-fill"
                        >
                          <path
                            d="M1.13517 5.43373C0.830674 5.33223 0.827757 5.16832 1.14101 5.0639L12.2751 1.35273C12.5837 1.25007 12.7604 1.42273 12.6741 1.7249L9.49259 12.8584C9.40509 13.167 9.22717 13.1775 9.09651 12.8846L7.00001 8.16665L10.5 3.49998L5.83334 6.99998L1.13517 5.43373Z"
                            fill="white"
                            id="Vector"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            step desc
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center work-flow-auth-avatar-wrapper basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-avatar ant-avatar-sm ant-avatar-circle work-flow-auth-avatar css-7njbce css-dev-only-do-not-override-txh9fw"
                                  >
                                    <span
                                      class="ant-avatar-string"
                                      style="transform: scale(1) translateX(-50%);"
                                    >
                                      T
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module css-dev-only-do-not-override-txh9fw"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level css-dev-only-do-not-override-txh9fw"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text css-dev-only-do-not-override-txh9fw"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps css-dev-only-do-not-override-txh9fw"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item css-dev-only-do-not-override-txh9fw"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title css-dev-only-do-not-override-txh9fw"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time css-dev-only-do-not-override-txh9fw"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="time-line"
                      >
                        <path
                          d="M8.00004 14.6666C4.31804 14.6666 1.33337 11.682 1.33337 7.99998C1.33337 4.31798 4.31804 1.33331 8.00004 1.33331C11.682 1.33331 14.6667 4.31798 14.6667 7.99998C14.6667 11.682 11.682 14.6666 8.00004 14.6666ZM8.00004 13.3333C9.41453 13.3333 10.7711 12.7714 11.7713 11.7712C12.7715 10.771 13.3334 9.41447 13.3334 7.99998C13.3334 6.58549 12.7715 5.22894 11.7713 4.22874C10.7711 3.22855 9.41453 2.66665 8.00004 2.66665C6.58555 2.66665 5.229 3.22855 4.2288 4.22874C3.22861 5.22894 2.66671 6.58549 2.66671 7.99998C2.66671 9.41447 3.22861 10.771 4.2288 11.7712C5.229 12.7714 6.58555 13.3333 8.00004 13.3333ZM8.66671 7.99998H11.3334V9.33331H7.33337V4.66665H8.66671V7.99998Z"
                          fill="#8A8F99"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
